# Net-Topo

./: .gitignore  README.md  net_topo.h
Relatorio/: bibliography.bib  main.out.ps  main.tex  planejamento.tex
cmake/: FindCONV.cmake
codigo/: CMakeLists.txt  Makefile  averages.py  avg_bench.py  bench.txt  bench_no_memoi.txt  benchmark.sh  dual_routines.sh
codigo/bench_results/: avg_bench.py  bench.txt  charm_data.txt  dist.1.mesh2D_16.no_memoi.txt  dist.1.mesh2D_16.txt  dist.1.mesh2D_16.with_fill.txt  dist.1.mesh3D_8.no_memoi.txt  dist.1.mesh3D_8.txt  dist.1.mesh3D_8.with_fill.txt  dist.1.mesh3D_8.with_memoi.txt  dist.1.tree_10.no_memoi  dist.1.tree_10.no_memoi.txt  dist.1.tree_10.txt  dist.1.tree_10.with_fill.txt  dist.1.tree_10.with_memoi.txt  dist.1.tree_7.no_memoi.txt  dist.1.tree_7.txt  dist.1.tree_7.with_fill.txt  dist.1.tree_7.with_memoi.txt  dist.2.mesh2D_16.no_memoi.txt  dist.2.mesh2D_16.txt  dist.2.mesh2D_16.with_fill.txt  dist.2.mesh2D_16.with_memoi.txt  dist.2.mesh3D_8.no_memoi  dist.2.mesh3D_8.no_memoi.txt  dist.2.mesh3D_8.txt  dist.2.mesh3D_8.with_fill.txt  dist.2.mesh3D_8.with_memoi.txt  dist.2.tree_10.no_memoi.txt  dist.2.tree_10.txt  dist.2.tree_10.with_fill.txt  dist.2.tree_10.with_memoi.txt  dist.2.tree_7.no_memoi.txt  dist.2.tree_7.txt  dist.2.tree_7.with_fill.txt  dist.2.tree_7.with_memoi.txt  fill.mesh2D_16.txt  fill.mesh3D_8.txt  fill.tree_10.txt  fill.tree_7.txt  (+41 more)
codigo/charm/executions_output/: bigdata.txt  biglbtime.txt  data.txt  lbdata.txt  mybigdata.txt  mydata.txt
codigo/charm/myNeighborLB/: myNborBaseLB.C  myNborBaseLB.ci  myNeighborLB.ci
codigo/include/: CSC.h  net_topo.h  net_topo_charm_proxy.h  upper_matrix.h
codigo/src/: CSC.cpp  CSC.h  CSCtemplates.h  Makefile  net_topo.cpp  net_topo.h  tests.cc  upper_matrix.cpp  upper_matrix.h
codigo/tests/: \textit{tree 7}     & $0.24 (16.53\%)$  execs.cpp  syntetic_create.cc  tests.cc
monografia/: 1_introducao.tex  2_conceituacao.tex  3_proposta.tex  4_comprovacao.tex  5_conclusao.tex  6_artigo.tex  7_codigo.tex  8_testes.tex  9_charm.tex  bibliography.bib  main.tex  planejamento.tex
monografia/codigo/: CSC.cpp  CSC.h  myNborBaseLB.h  myNeighborLB.C  myNeighborLB.h  net_topo.cpp  net_topo.h  tests.cc  upper_matrix.h
proposta/: bibliography.bib  main.tex
